--- a/content/Articles/230205-Dawu.md
+++ b/content/Articles/230205-Dawu.md
@@ -8,11 +8,8 @@ tags: ["日記", "心得", "醫療"]
 image: "/img/Dawu01.jpg"
 hide: false
 ---
-{{< mquote >}}「我問你哦，這幾天的活動你怎麼給分?」  {{< /mquote >}}
-{{< mquote >}}「DIY 2.5分...大地活動0.3分...然後你...3.2分」  {{< /mquote >}}
-{{< mquote >}} 他指了指我，繼續說...「滿分是3分」  {{< /mquote >}}
 \
-{{< mimg src="/img/Dawu02.jpg" width="100vw" height="" >}}
+{{< mimg2 src="/img/Dawu01.jpg" ptext="千佑正爬上一棵老樹眺望遠方" >}}
 \
 我是個糟糕的美宣 到了營期才發現自己把孩子們的名牌打錯了字，像温寫成溫，佑誤植成了祐。  
 \
@@ -38,9 +35,18 @@ hide: false
 像柔軟的草地，讓他們的心有一方溫柔處，能在上面靜靜休憩。儘管未來可能有著許許多多灰色調的挑戰等著他們，也仍
 會有一個彩色的回憶陪伴著孩子們長大。  
 \
+{{< mimg src="/img/Dawu03.jpg" ptext="千佑說，他們稱這顆紅色的石頭叫心臟石。它靜靜的躺在草地，靜靜的心。" >}}
+\
 \
 最後一天我送千佑去家長接送區，他還是一直脫隊，也還是一直光著腳ㄚ走路，他還是他，他依舊是那個惹人煩的研究學者。  
 \
 「我只能送你到這了」我和千佑說。他默默的一句話也沒說，他自己應該也知道，接下來的路他要自己走，所以他沒有回頭。  
 \
 那天他插在我頭上的黃花，叫葶藶子，花語是勇氣。  
+\
+\
+{{< mimg2 src="/img/Dawu02.jpg" ptext="我和他" >}}
+\
+{{< mquote >}}「我問你哦，這幾天的活動你怎麼給分?」  {{< /mquote >}}
+{{< mquote >}}「DIY 2.5分...大地活動0.3分...然後你...3.2分」  {{< /mquote >}}
+{{< mquote >}} 他指了指我，繼續說...「滿分是3分」  {{< /mquote >}}
