--- a/content/Articles/230205-Dawu.md
+++ b/content/Articles/230205-Dawu.md
@@ -29,13 +29,13 @@ hide: false
 營期的最後，千佑帶我逛了整個校園，他爬上了一棵老樹，看著遠方的雲和山。在這裡每個校園藝術裝置都被孩子們賦予
 歌謠與傳說，在他們心中，這裡是最善良純粹的樂園。  
 \
+{{< mimg src="/img/Dawu03.jpg" ptext="千佑說，他們稱這顆紅色的石頭叫心臟石。它靜靜的躺在草地，歲月靜好。" >}}
+\
 但國中的環境可能沒那麼單純，千佑說這裡的國中生都會抽煙喝酒嚼檳榔，從主任那裡，也聽說不少孩子的家庭都不完整
 ，或曾經歷性侵與家暴。這些可愛的孩子未來會走上什麼路我不得而知，他們在這裡面對遠比我們想像中更艱難的挑戰，
 單單一個育樂營是無能力改變什麼的。但至少，至少我們給了孩子們一個美好的回憶。在他們往後的生活中，這份回憶能
 像柔軟的草地，讓他們的心有一方溫柔處，能在上面靜靜休憩。儘管未來可能有著許許多多灰色調的挑戰等著他們，也仍
 會有一個彩色的回憶陪伴著孩子們長大。  
-\
-{{< mimg src="/img/Dawu03.jpg" ptext="千佑說，他們稱這顆紅色的石頭叫心臟石。它靜靜的躺在草地，靜靜的心。" >}}
 \
 \
 最後一天我送千佑去家長接送區，他還是一直脫隊，也還是一直光著腳ㄚ走路，他還是他，他依舊是那個惹人煩的研究學者。  
@@ -45,8 +45,4 @@ hide: false
 那天他插在我頭上的黃花，叫葶藶子，花語是勇氣。  
 \
 \
-{{< mimg2 src="/img/Dawu02.jpg" ptext="我和他" >}}
-\
-{{< mquote >}}「我問你哦，這幾天的活動你怎麼給分?」  {{< /mquote >}}
-{{< mquote >}}「DIY 2.5分...大地活動0.3分...然後你...3.2分」  {{< /mquote >}}
-{{< mquote >}} 他指了指我，繼續說...「滿分是3分」  {{< /mquote >}}
+{{< mimg2 src="/img/Dawu02.jpg" ptext="「我問你哦，這幾天的活動你怎麼給分?」他想了想:「DIY 2.5分...大地活動0.3分...然後你...3.2分」他指了指我，繼續說...「滿分是3分」" >}}
