--- a/content/Articles/230205-Dawu.md
+++ b/content/Articles/230205-Dawu.md
@@ -5,7 +5,7 @@ draft: false
 author: "Tony"
 categories: ["手札"]
 tags: ["日記", "心得", "醫療"]
-image: "/img/Dawu01.jpg"
+image: "/img/Dawu01-small.jpg"
 hide: false
 ---
 \
